<resources>
    <string name="app_name">MichaelaHMakeup</string>
    <string name="button_AddProduct">Add Product</string>
    <string name="hint_productTitle">Product Title</string>
    <string name="hint_productDescription">Product Description</string>
    <string name="menu_addProduct">Add</string>
    <string name="menu_cancelProduct">Cancel</string>
    <string name="enter_product_title">Please enter a Product Title</string>
    <string name="save_product">Save Product</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_product_image">Select Product Image</string>
    <string name="change_product_image">Change Product Image</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="menu_deleteProduct">Delete</string>
    <string name="product_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <!--<string name="title_activity_product_maps">ProductMapsActivity</string>-->
    <string name="title_activity_product_maps">Map of All Product Stores</string>


</resources>
