<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" tools:ignore="ExtraText">

    <item
            android:id="@+id/item_add"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/menu_addProduct"
            app:showAsAction="always"/>

//https://developer.android.com/studio/write/vector-asset-studio.html#running



    <item
            android:id="@+id/item_home"
            android:title="@string/home"
            app:showAsAction="never"/>  //never will always put a menu item in the overflow options menu
//https://android.jlelse.eu/lessons-in-kotlin-the-toolbar-icons-and-reflection-79e77208367e
    <item
            android:id="@+id/item_product"
            android:title="@string/product"
            app:showAsAction="never"/>
    <item
            android:id="@+id/item_contact"
            android:title="@string/contact"
            app:showAsAction="never"/>
</menu>